Added rendered image to doc

--- a/docs/src/doc.tex
+++ b/docs/src/doc.tex
@@ -45,6 +45,8 @@
 \begin{document}
 \maketitle
 
+\image{0.7\textwidth}{render.png}{3D rendered image of the custom extension board used for this music player}{ht}
+
 \begin{abstract}
 This is time for all good men to come to the aid of their party! \ldots
 \end{abstract}
