--- a/docs/src/doc.tex
+++ b/docs/src/doc.tex
@@ -72,7 +72,7 @@ Pin. No.   & Name    & Description	    & Note for our implementation \\ \hline
 4	       & VDD	 & Voltage	        & Supply Voltage (+3.3 V) \\
 5	       & CLK	 & Clock	        & Chip IO Pin,  mmc\_clock, D10 \\
 6	       & GND	 & Ground	        & Board ground \\
-7	       & DAT0	 & Data	            & Chip IO,  mmc\_miso, B4, (MIDO - master in, slave out) \\
+7	       & DAT0	 & Data	            & Chip IO,  mmc\_miso, B4, (MISO - master in, slave out) \\
 8	       & DAT1	 & Data	            & Pull up (Voltage via resistor) \\
 9	       & DAT2	 & Data	            & Pull up (Voltage via resistor) \\
 	\hline
